--- a/azure.css
+++ b/azure.css
@@ -17,23 +17,21 @@ body a:hover {
 
 .subWindow {
     background: #FEFFFE;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin: 5px;
     z-index: 0;
 }
 
 .subWindowWraper {
     z-index: 100;
     position: absolute;
-    margin-left: 10px;
-    margin-right: 10px;
-    background: blue;
+    margin: 5px;
 }
 
 .subWindowInWrapper {
     background: #FEFFFE;
     z-index: 0;
     margin: 0px;
+    border: 2px solid #50C0FF;
 }
 
 .xRemove {
@@ -48,10 +46,11 @@ body a:hover {
     padding: 5px;
     font-weight: bold;
     background: red;
+    cursor: pointer;
 }
 
 .titleBar {
-    background: #7090FF;
+    background: #50C0FF;
     color: white;
     height: 30px;
 }
