--- a/azure.css
+++ b/azure.css
@@ -22,6 +22,7 @@ body a:hover {
     z-index: 0;
     color: black;
     font-weight: 400;
+    padding: 5px;
 }
 
 .subWindowWraper {
@@ -37,6 +38,7 @@ body a:hover {
     border: 2px solid #50c0ff;
     color: black;
     font-weight: 400;
+    padding: 5px;
 }
 
 .xRemove {
@@ -280,8 +282,81 @@ nav .nav-link-user {
     height: 30px;
 }
 
+.serviceWindows {
+    position: absolute;
+    width: 80vw;
+    height: 95vh;
+    overflow: auto;
+    top: 0px;
+    left: calc(15vw);
+}
+
+.serviceWindowHolder {
+    width: 130vw;
+    height: 200vh;
+    overflow: scroll;
+}
+
+.serviceWindow {
+    position: relative;
+    height: 100%;
+    width: 30vw;
+    background: white;
+    margin-left: 2px;
+    color: #464646;
+    float: left;
+}
+
+.serviceWindowWide {
+    position: relative;
+    height: 100%;
+    width: 40vw;
+    background: white;
+    margin-left: 2px;
+    color: #464646;
+    float: left;
+}
+
+.serviceWindowTitleBarWide {
+    width: 40vw;
+    height: 6vh;
+    margin-left: 2px;
+    margin-top: 2px;
+    background: #1b1b1b;
+    color: white;
+    float: left;
+}
+
+.serviceWindowTitleBar {
+    width: 30vw;
+    height: 6vh;
+    margin-left: 2px;
+    margin-top: 2px;
+    background: #1b1b1b;
+    color: white;
+    float: left;
+}
+
+.serviceWindowTitleText {
+    padding-left: 5px;
+    font-size: 12pt;
+    float: left;
+}
+
+.serviceWindowTitleX {
+    float: right;
+    font-weight: bold;
+    padding-right: 5px;
+}
+
 .subWindow a {
     color: #0057ac;
+    background: #FFffff;
+}
+
+.subWindowInWrapper a {
+    color: #0057ac;
+    background: #FFffff;
 }
 
 .menuAndDashboardHolder {
