updates and sql

--- a/azure.css
+++ b/azure.css
@@ -550,7 +550,7 @@ nav .nav-link-user {
     color: #fff;
     text-decoration: none;
     display: block;
-    padding: 0px;
+    padding: 5px 5px 0px 5px;
     width: 200px;
 }
 
