little more fixing for varying dimensions

--- a/azure.css
+++ b/azure.css
@@ -511,9 +511,7 @@ nav .nav-link-user {
     }
 }
 
-
-/*
-@media screen and (min-width: 800px) and (max-width: 1200px) {
+@media screen and (max-width: 1200px) {
     .menuBar {
         background: #242524;
         font-family: "Open Sans", sans-serif;
@@ -522,20 +520,21 @@ nav .nav-link-user {
         top: 0px;
         left: 0px;
         width: 20vw;
-        height: 95vh;
+        height: 100vh;
     }
 }
-*/
 
 .left-menu {
     float: left;
     margin: 0px;
     padding-top: 10px;
     left: 0px;
+    width: 15vw;
 }
 
 .menuBar .left-menu a {
     background: #242524;
+    width: 15vw;
 }
 
 .menuBar ul {
@@ -543,7 +542,8 @@ nav .nav-link-user {
     list-style-type: none;
     float: left;
     margin-left: 10px;
-    left: -50px;
+    left: -40px;
+    width: 15vw;
 }
 
 .menuBar ul li a {
@@ -551,19 +551,19 @@ nav .nav-link-user {
     text-decoration: none;
     display: block;
     padding: 5px 5px 0px 5px;
-    width: 200px;
+    width: 15vw;
 }
 
 .menuBar ul li a:hover {
     background: blue;
-    width: 200px;
+    width: 15vw;
 }
 
 .menuBar ul li:hover>ul {
     background: #242524;
     opacity: 0.8;
-    left: 200px;
-    width: 200px;
+    left: 15vw;
+    width: 15vw;
     display: inline-block;
     -webkit-transition: left 300ms ease-in;
     -moz-transition: left 300ms ease-in;
@@ -575,11 +575,9 @@ nav .nav-link-user {
     display: inline-block;
     position: absolute;
     top: 0;
-    left: -300px;
-    min-width: 250px;
-    width: 200px;
+    left: -20vw;
+    width: 15vw;
     z-index: 120;
-    height: 100%;
     -webkit-transition: left 200ms ease-in;
     -moz-transition: left 200ms ease-in;
     -ms-transition: left 200ms ease-in;
@@ -587,7 +585,7 @@ nav .nav-link-user {
 }
 
 .menuBar ul li>ul li a:hover {
-    width: 200px;
+    width: 15vw;
 }
 
 
